--- a/conf/sen_config.yaml
+++ b/conf/sen_config.yaml
@@ -5,22 +5,22 @@ data:
     n_mels: 40
     win_length: 250
     hop_length: 100
-    n_class: 103 # get from dataset externally 
+    n_class: 103 # get from dataset externally
     batch_size: 40
     num_workers: 20
   train:
-    json_file: ../data/train_flower_en2vi.json
-    img_path: ../data/image_oxford/image_oxford
-    audio_path: ../data/oxford_audio/oxford_audio
+    json_file: ../train_flower_en2vi.json
+    img_path: ../image_oxford/image_oxford
+    audio_path: ../oxford_audio/oxford_audio
     input_size: ${data.general.input_size}
     n_fft: ${data.general.n_fft}
     n_mels: ${data.general.n_mels}
     win_length: ${data.general.win_length}
     hop_length: ${data.general.hop_length}
   test:
-    json_file: ../data/test_flower_en2vi.json
-    img_path: ../data/image_oxford/image_oxford
-    audio_path: ../data/oxford_audio/oxford_audio
+    json_file: ../test_flower_en2vi.json
+    img_path: ../image_oxford/image_oxford
+    audio_path: ../oxford_audio/oxford_audio
     input_size: ${data.general.input_size}
     n_fft: ${data.general.n_fft}
     n_mels: ${data.general.n_mels}
