--- a/conf/rdg_config.yaml
+++ b/conf/rdg_config.yaml
@@ -80,8 +80,14 @@ loss:
 ckpt:
   speech_encoder: ckpt/speech_encoder.pt
   image_encoder: ckpt/image_encoder.pt
-  generator: null
-  discrminator_64: null
-  discrminator_128: null
-  discrminator_256: null
-  relation_classifier: null
+  generator: ckpt/generator.pt
+  discrminator_64: ckpt/discrminator_64.pt
+  discrminator_128: ckpt/discrminator_128.pt
+  discrminator_256: ckpt/discrminator_256.pt
+  relation_classifier: ckpt/relation_classifier.pt
+  optimizer:
+    optimizer_discriminator_64: ckpt/optimizer_discriminator_64.pt
+    optimizer_discriminator_128: ckpt/optimizer_discriminator_128.pt
+    optimizer_discriminator_256: ckpt/optimizer_discriminator_256.pt
+    optimizer_generator: ckpt/optimizer_generator.pt
+    optimizer_rs: ckpt/optimizer_rs.pt
